app/PokeScout/common/nfc/src/main/java/com/example/nfc/error/NfcWriteException.kt
package com.example.nfc.error

sealed class NfcWriteException: Exception() {
    data object NotNdefFormattedException: NfcWriteException()
}